<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".ProductDetailActivity">

    <!-- Product name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:id="@+id/product_label"
            style="@style/CategoryStyle"
            android:text="@string/product_overview" />

        <!-- Name -->
        <FrameLayout
            android:id="@+id/frame_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <!-- Name field edit -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_name_hint"
                android:inputType="textCapWords" />

            <!-- Name field display -->
            <TextView
                android:id="@+id/tv_product_name"
                style="@style/DisplayTextFieldStyle"
                tools:text="@string/product_name_hint" />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:id="@+id/quantity_label"
            style="@style/CategoryStyle"
            android:text="" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reduce_item_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_weight="1"
                android:text="-" />

            <FrameLayout
                android:id="@+id/fram_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <!-- Quantity field edit -->
                <EditText
                    android:id="@+id/edit_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/product_quantity_hint"
                    android:inputType="number" />

                <!-- Quantity field display-->
                <TextView
                    android:id="@+id/tv_quantity"
                    style="@style/DisplayTextFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:text="@string/product_quantity_hint" />
            </FrameLayout>

            <Button
                android:id="@+id/add_item_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_weight="1"
                android:text="+" />
        </LinearLayout>
    </LinearLayout>

    <!-- Price -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/text_margin"
            android:scaleType="centerInside"
            android:src="@drawable/ic_attach_money" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <!-- Price field edit-->
            <EditText
                android:id="@+id/edit_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_price_hint"
                android:inputType="number" />

            <!-- Price field display -->
            <TextView
                android:id="@+id/tv_price"
                style="@style/DisplayTextFieldStyle"
                tools:text="@string/product_price_hint" />
        </FrameLayout>
    </LinearLayout>

    <!-- Supplier -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:id="@+id/supplier_label"
            style="@style/CategoryStyle"
            android:text="@string/supplier_overview" />

        <FrameLayout
            android:id="@+id/frame_supplier_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <!-- Supplier Name field edit -->
            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_name_hint"
                android:inputType="text" />

            <!-- Supplier Name field display -->
            <TextView
                android:id="@+id/tv_supplier_name"
                style="@style/DisplayTextFieldStyle"
                tools:text="@string/supplier_name_hint" />

        </FrameLayout>
    </LinearLayout>

    <!-- Phone -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/call_button"
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/ic_local_phone" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <!-- Phone field edit -->
            <EditText
                android:id="@+id/edit_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_phone_hint"
                android:inputType="phone" />

            <!-- Phone field display -->
            <TextView
                android:id="@+id/tv_phone"
                style="@style/DisplayTextFieldStyle"
                tools:text="@string/supplier_phone_hint" />

        </FrameLayout>
    </LinearLayout>
</LinearLayout>