<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D"
        tools:text="Product name" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:fontFamily="sans-serif"
        android:text="@string/price_text"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/price_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_toEndOf="@id/price"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD"
        tools:text="34" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_toEndOf="@+id/price_value"
        android:fontFamily="sans-serif"
        android:text="@string/quantity_text"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/quantity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_toEndOf="@+id/quantity"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD"
        tools:text="80" />

    <Button
        android:id="@+id/sell_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:focusable="false"
        android:text="@string/sell_button" />
</RelativeLayout>